--- a/environment.yml
+++ b/environment.yml
@@ -1,13 +1,13 @@
-name: ldsc
+name: ldsc3
 channels:
+- default
 - bioconda
 dependencies:
-- python=2.7
-- bitarray=0.8
-- nose=1.3
-- pybedtools=0.7
-- pip
-- pip:
-  - scipy==0.18
-  - pandas==0.20
-  - numpy==1.12
+- python=3.6.8
+- bitarray=0.8.3
+- nose=1.3.7
+- pybedtools=0.8.0
+- scipy==1.2.1
+- pandas==0.24.2
+- numpy==1.15.4
+
